[dependencies]
clap = '3.0.6'
num = '0.4.0'
pest = '2.1.3'
pest_derive = '2.1.0'
serde_yaml = '0.8.21'
kiss3d = '0.32.0'
nalgebra = '0.30.1'
rand='0.8.4'
fftw = '0.7.0'
ndarray = '0.15.4'

[dependencies.serde]
features = ['derive']
version = '1.0.130'

[dependencies.healpix_fits]
path = '../healpix_fits'

[dependencies.necrs]
path = '../necrs'

[dependencies.scorus]
path = '../scorus'

[dependencies.fitsimg]
path = '../rust_fitsimg'

[package]
edition = '2021'
name = 'dbf_beam_simulator'
version = '0.1.0'
