[dependencies]
clap = '3.1.6'
fftw = '0.7.0'
kiss3d = '0.34.0'
nalgebra = '0.30.1'
ndarray = '0.15.4'
num = '0.4.0'
pest = '2.1.3'
pest_derive = '2.1.0'
rand = '0.8.5'
serde_yaml = '0.8.23'

[dependencies.fitsimg]
path = '../rust_fitsimg'

[dependencies.healpix_fits]
path = '../healpix_fits'

[dependencies.necrs]
path = '../necrs'

[dependencies.scorus]
path = '../scorus'

[dependencies.serde]
features = ['derive']
version = '1.0.136'

[package]
edition = '2021'
name = 'dbf_beam_simulator'
version = '0.1.0'
