[dependencies]
clap = '3.1.6'
kiss3d = '0.34.0'
nalgebra = '0.30.1'
ndarray = '0.15.4'
num = '0.4.0'
pest = '2.1.3'
pest_derive = '2.1.0'
rand = '0.8.5'
serde_yaml = '0.8.23'
rustfft='6.0.1'


[dependencies.scorus]
path = '../scorus'

[dependencies.serde]
features = ['derive']
version = '1.0.136'


[target.'cfg(not (target_family = "wasm"))'.dependencies]
fitsimg={path = '../rust_fitsimg'}
healpix_fits={path = '../healpix_fits'}
necrs={path = '../necrs'}


[package]
edition = '2021'
name = 'dbf_beam_simulator'
version = '0.1.0'

[lib]
crate-type = ["cdylib", "lib"]